# recorded

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  OVERVIEW.md  PROGRESS_1_1.md  PROGRESS_2_A_1.md  PROGRESS_2_C_1.md  PROGRESS_INTEGRATION.md  PROGRESS_PHASE1.md  PROGRESS_PHASE2_A.md  PROGRESS_PHASE2_B.md  PROGRESS_PHASE2_C.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  HOW.md  OVERVIEW.md  WHY.md
docs/examples/: 01_claude_turns.py  02_fastapi_app.py  03_api_consumer.py  04_treasury_snapshot.py  05_codebase_scan.py  README.md
docs/usage/: README.md  configuration.md  decorator.md  errors.md  fastapi.md  idempotency.md  queries.md  reading.md  typed-slots.md  workers.md
scripts/: ci-matrix.sh  ci.sh
src/recorded/: __init__.py  __main__.py  _adapter.py  _cli.py  _context.py  _decorator.py  _errors.py  _handle.py  _lifecycle.py  _recorder.py  _registry.py  _storage.py  _types.py  _worker.py  fastapi.py
tests/: _leader_kinds.py  conftest.py  test_attach.py  test_attach_error.py  test_cli.py  test_cli_run.py  test_configure.py  test_data_projection.py  test_fastapi.py  test_handle.py  test_idempotency.py  test_integration.py  test_leader_heartbeat.py  test_leader_helpers.py  test_lifecycle.py  test_read.py  test_read_api.py  test_reaper.py  test_request_model_check.py  test_reserved_kind.py  test_serialization_error.py  test_shims.py  test_storage.py  test_submit_gate.py  test_to_prompt.py  test_typed_slots.py  test_types.py  test_wait_primitive.py  test_worker.py
