[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recorded"
version = "0.1.0"
description = "Typed function-call recorder backed by SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "recorded contributors"}]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "pydantic>=2",
    "pytest-httpserver>=1",
    "httpx>=0.27",
    "fastapi>=0.110",
    "ruff>=0.7",
    "ty>=0.0.1a1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/recorded"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F841"]

# Runtime requires SQLite >= 3.35.0 (UPDATE ... RETURNING).
