[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recorded"
version = "0.1.0"
description = "Typed function-call recorder backed by SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "recorded contributors"}]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2"]
matrix = [
    "tox>=4.18",
    "tox-uv>=1.13",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6",
    "pydantic>=2",
    "pytest-httpserver>=1",
    "httpx>=0.27",
    "fastapi>=0.110",
    "ruff>=0.7",
    "ty>=0.0.1a1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/recorded"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "F841"]

[tool.tox]
requires = ["tox>=4.18", "tox-uv>=1.13"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "pytest on {base_python}"
runner = "uv-venv-lock-runner"
extras = ["dev"]
commands = [["pytest", "-q", "-n", "auto"]]

# Runtime requires SQLite >= 3.35.0 (UPDATE ... RETURNING).
